# bedspec

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  build.py  pyproject.toml  test.txt
.github/workflows/: publish.yml  publish_bedspec.yml  pythonpackage.yml  tests.yml  wheels.yml
bedspec/: __init__.py  _bedspec.py  _io.py  _reader.py  _types.py  _typing.py
bedspec/io/: __init__.py
bedspec/overlap/: __init__.py  _overlap.py
tests/: conftest.py  test_bedspec.py  test_io.py  test_overlap.py  test_reader.py  test_types.py  test_typing.py  test_writer.py
